syntax = "proto3";

package main;

service Pasty {
    rpc GetPaste (PasteRequest) returns (PasteResponse) {}
}

message PasteRequest {
    string token = 1;
    int64 limit = 2;
}

message PasteItem {

}

message PasteResponse {
    repeated PasteItem items = 1;
}
